Navbar added, buttons added
Added a ton of stuff, such as navbar and rollover buttons .  Added a gradient to navbar

Still need to figure out how to move buttons to the left and right

--- a/index.html
+++ b/index.html
@@ -3,18 +3,45 @@
 
 <!DOCTYPE html>
 <html lang="en-ca">
-
 <html>
 
 <head>
   <link rel="stylesheet" href="styles.css">
+
+  <!-- Imports Google icons for use-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <title>foodGram</title>
+
 <body>
 
-    <h1 title="foodGram Homepage">foodGram</h1>
-    <p>Welcome to foodGram, where delicious food is only a click away.</p>
+  <header> 
+    <button style="font-size:20px"> Create Account </button>
+    <button style="font-size:20px"> Log In </button>
+    
+    foodGram 
+    
+    <button style="font-size:20px"> Search <i class="material-icons">search</i> </button>
+    <button style="font-size:20px"> Cart <i class="material-icons">add_shopping_cart</i></button>
+
+  </header>
+
+  <ul id = "navbar">
+    <li><a href="#Fast Food">Fast Food</a></li>
+    <li><a href="#Pizza">Pizza</a></li>
+    <li><a href="#Burgers">Burgers</a></li>
+    <li><a href="#Fine Dinning">Fine Dinning</a></li>
+    <li><a href="#Desserts">Desserts</a></li>
+    <li><a href="#Drinks">Drinks</a></li>
+  </ul>
+
+  <p>Welcome to foodGram, where delicious food is only a click away.</p>
+
+
+
+
+
 
 </body>
 </html>>
