Fixed header button alignment
Fix issues with header bar, currently tidying code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
   <!-- Imports Google icons for use-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+
+
 </head>
 
 <title>foodGram</title>
@@ -28,7 +31,13 @@
     <button class = "headerButton right"> <i class="material-icons">add_shopping_cart</i> Cart </button>
     <button class = "headerButton right"> <i class="material-icons">search</i> Search  </button>
 
-    <ul id = "navbar">
+    <!-- creates a red space between header and navbar-->
+    <div style="height: 10px; background-color: red"></div>
+
+  </header>
+
+
+  <ul id = "navbar">
     <li><a href="#Fast Food">Fast Food</a></li>
     <li><a href="#Pizza">Pizza</a></li>
     <li><a href="#Burgers">Burgers</a></li>
@@ -36,12 +45,10 @@
     <li><a href="#Desserts">Desserts</a></li>
     <li><a href="#Drinks">Drinks</a></li>
   </ul>
-
-  </header>
+  
 
 
   
-
 
   <p>Welcome to foodGram, where delicious food is only a click away.</p>
 
