Social Menu Skeleteon Implemented
Got the basics of the side social menu working! It's a start

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
   <!-- Imports Google icons for use-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-
-
 </head>
 
 <title>foodGram</title>
@@ -37,17 +35,26 @@
   </header>
 
 
-  <ul id = "navbar">
-    <li><a href="#Fast Food">Fast Food</a></li>
-    <li><a href="#Pizza">Pizza</a></li>
-    <li><a href="#Burgers">Burgers</a></li>
-    <li><a href="#Fine Dinning">Fine Dinning</a></li>
-    <li><a href="#Desserts">Desserts</a></li>
-    <li><a href="#Drinks">Drinks</a></li>
-  </ul>
+  <div class = "topNavBar">
+    <a href="#Fast Food">Fast Food</a>
+    <a href="#Pizza">Pizza</a>
+    <a href="#Burgers">Burgers</a>
+    <a href="#Fine Dinning">Fine Dinning</a>
+    <a href="#Desserts">Desserts</a>
+    <a href="#Drinks">Drinks</a>
+  </div>
   
 
+  <div class = "socialMenu">
 
+    <button class = "socialMenu button"> Review 1 </button>
+    <button class = "socialMenu button"> Review 2 </button>
+    <button class = "socialMenu button"> Review 3 </button>
+    <button class = "socialMenu button"> Review 4 </button>
+    <button class = "socialMenu button"> Review 5 </button>
+    <button class = "socialMenu button"> Review 6 </button>
+
+  </div>
   
 
   <p>Welcome to foodGram, where delicious food is only a click away.</p>
