Added Frame  for Featured Reviews

--- a/index.html
+++ b/index.html
@@ -55,7 +55,25 @@
     <button class = "socialMenu button"> Review 6 </button>
 
   </div>
+
   
+  <div class = "featuredReview">
+
+    <button class = "featureReview Button"> Featured Review 1 </button>
+
+  </div>
+
+  <div class = "mainMenu">
+
+    <a href="#Fast Food">Fast Food</a>
+    <a href="#Pizza">Pizza</a>
+    <a href="#Burgers">Burgers</a>
+    <a href="#Fine Dinning">Fine Dinning</a>
+    <a href="#Desserts">Desserts</a>
+    <a href="#Drinks">Drinks</a>
+
+  </div>
+
 
   <p>Welcome to foodGram, where delicious food is only a click away.</p>
 
