Added comments and known issues

--- a/index.html
+++ b/index.html
@@ -24,16 +24,14 @@
     
     foodGram
     
-    <!-- Trouble getting this to align to the right without messing up navbar-->
-
     <button class = "headerButton right"> <i class="material-icons">add_shopping_cart</i> Cart </button>
     <button class = "headerButton right"> <i class="material-icons">search</i> Search  </button>
 
 
   </header>
 
-  <!-- creates a red space between header and navbar-->
-  <div style="height: 10px; background-color: red"></div>
+  <!-- creates a red space between header and navbar, should be a better solution to this-->
+  <div style="height: 10px; background-color: red; margin: auto;"></div>
 
   <div class = "topNavBar">
     <a href="#Fast Food">Fast Food</a>
