Added list for menu, and menu header
Added list with mouse-over and menu header. Added mouse-over to all buttons.

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
   <div style="height: 10px; background-color: red; margin: auto;"></div>
 
   <div class = "topNavBar">
-    <a href="#Fast Food">Fast Food</a>
-    <a href="#Pizza">Pizza</a>
-    <a href="#Burgers">Burgers</a>
-    <a href="#Fine Dinning">Fine Dinning</a>
-    <a href="#Desserts">Desserts</a>
-    <a href="#Drinks">Drinks</a>
+    <a href = "#Fast Food"> Fast Food </a>
+    <a href = "#Pizza"> Pizza </a>
+    <a href = "#Burgers"> Burgers </a>
+    <a href = "#Fine Dinning"> Fine Dinning </a>
+    <a href = "#Desserts"> Desserts </a>
+    <a href = "#Drinks"> Drinks </a>
   </div>
   
 
@@ -61,21 +61,20 @@
 
   </div>
 
+
   <div class = "mainMenu">
 
-    <a href="#Fast Food">Fast Food</a>
-    <a href="#Pizza">Pizza</a>
-    <a href="#Burgers">Burgers</a>
-    <a href="#Fine Dinning">Fine Dinning</a>
-    <a href="#Desserts">Desserts</a>
-    <a href="#Drinks">Drinks</a>
+    <h2> Menu</h2>
+  
+    <a href = "#Item 1"> Item 1 </a>
+    <a href = "#Item 2"> Item 2 </a>
+    <a href = "#Item 3"> Item 3 </a>
+    <a href = "#Item 4"> Item 4 </a>
+    <a href = "#Item 5"> Item 5 </a>
+    <a href = "#Item 6"> Item 6 </a>
 
   </div>
 
 
-  <p>Welcome to foodGram, where delicious food is only a click away.</p>
-
-
-
 </body>
-</html>>
+</html>
