Container Span Fixed
Fixed issues with the spanning of the menu and featured review not completely spanning to the right edge of the display.  I was using div when i should have been using span

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
   </div>
 
   
-  <div class = "featuredReview">
+  <span class = "featuredReview">
 
     <button class = "featureReview Button"> Featured Review 1 </button>
 
-  </div>
+  </span>
 
 
-  <div class = "mainMenu">
+  <span class = "mainMenu">
 
     <h2> Menu</h2>
   
@@ -73,7 +73,8 @@
     <a href = "#Item 5"> Item 5 </a>
     <a href = "#Item 6"> Item 6 </a>
 
-  </div>
+  </span>
+
 
 
 </body>
