Added search bar
Created a script file that adds the search bar, added some ids to the index.html file and added some rulesets to styles.css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <header> 
+  <header id="headerButtons"> 
 
     <button class = "headerButton left"> Create Account </button>
     <button class = "headerButton left"> Log In </button>
@@ -25,7 +25,7 @@
     foodGram
     
     <button class = "headerButton right"> <i class="material-icons">add_shopping_cart</i> Cart </button>
-    <button class = "headerButton right"> <i class="material-icons">search</i> Search  </button>
+    <button class = "headerButton right" id = "searchButton"> <i class="material-icons">search</i> Search  </button>
 
 
   </header>
@@ -74,6 +74,7 @@
     <a href = "#Item 6"> Item 6 </a>
 
   </span>
+  <script src = "script.js"> </script>
 
 
 
