--- a/index.html
+++ b/index.html
@@ -65,16 +65,34 @@
   <span class = "mainMenu">
 
     <h2> Menu</h2>
+    
+    <ul>
   
-    <a href = "#Item 1"> Item 1 </a>
-    <a href = "#Item 2"> Item 2 </a>
-    <a href = "#Item 3"> Item 3 </a>
-    <a href = "#Item 4"> Item 4 </a>
-    <a href = "#Item 5"> Item 5 </a>
-    <a href = "#Item 6"> Item 6 </a>
+      <a href = "#Mike's Special"> Mike's Special </a>
+      <a href = "#Large Fries with Extra Butter"> Large Fries with Extra Butter </a>
+      <a href = "#Spaghetti alla Code"> Spaghetti alla Code </a>
+      <a href = "#Item 4"> Item 4 </a>
+      <a href = "#Item 5"> Item 5 </a>
+      <a href = "#Item 6"> Item 6 </a>
+      <a href = "#Item 7"> Item 7 </a>
+      <a href = "#Item 8"> Item 8 </a>
+      <a href = "#Item 9"> Item 9 </a>
+      <a href = "#Item 10"> Item 10 </a>
+      <a href = "#Item 11"> Item 11 </a>
+      <a href = "#Item 12"> Item 12 </a>
+
+    </ul>
+
 
   </span>
+
   <script src = "script.js"> </script>
+
+
+  <div class="footer">
+    <a href = "#Contact us"> Contact us </a>
+  </div>
+
 
 
 
