Made Login and Create Account and linked it to index.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <header> 
 
-    <button class = "headerButton left"> Create Account </button>
-    <button class = "headerButton left"> Log In </button>
+    <button class = "headerButton left" onclick="document.location='create_account.html'"> Create Account </button>
+    <button class = "headerButton left" onclick="document.location='login.html'"> Log In </button>
     
     foodGram
     
