Font Color Change

--- a/create_account.html
+++ b/create_account.html
@@ -13,7 +13,7 @@
 
   <style>
 	body {
-		color: white;
+		color: black;
 	}
 		
 	input {
@@ -40,7 +40,7 @@
 		text-align: center;
 		width: 70%;
 		padding: 10px;
-		border: 2px solid white;
+		border: 2px solid black;
 	}
 
   </style>
