--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
   <style>
 	body {
-		color: white;
+		color: black;
 		overflow: auto;
 	}
 		
@@ -41,7 +41,7 @@
 		text-align: center;
 		width: 70%;
 		padding: 10px;
-		border: 2px solid white;
+		border: 2px solid black;
 	}
 
   </style>
