Added Cart Drop Down Menu
Added a drop down menu for the cart. The script.js and styles.css where modified

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     foodGram
     
-    <button class = "headerButton right"> <i class="material-icons">add_shopping_cart</i> Cart </button>
+    <button class = "headerButton right" id = "checkoutButton"> <i class="material-icons">add_shopping_cart</i> Cart </button>
     <button class = "headerButton right" id = "searchButton"> <i class="material-icons">search</i> Search  </button>
 
 
