--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     foodGram
     
     <button class = "headerButton right" id = "checkoutButton"> <i class="material-icons">add_shopping_cart</i> Cart </button>
-    <button class = "headerButton right" id = "searchButton"> <i class="material-icons">search</i> Search  </button>
-
-
+    <!--<button class = "headerButton right" id = "searchButton"> <i class="material-icons">search</i> Search  </button> -->
+    <form>
+      <input id = "searchBar" type="text" name="search">
+    </form>
   </header>
 
   <!-- creates a red space between header and navbar, should be a better solution to this-->
@@ -41,8 +42,6 @@
     <a href = "#Desserts"> Desserts </a>
     <a href = "#Drinks"> Drinks </a>
   </div>
-  
-
   <div class = "socialMenu">
 
     <button class = "socialMenu button"> Review 1 </button>
@@ -64,7 +63,7 @@
 
   <span class = "mainMenu">
 
-    <h2> Menu</h2>
+    <!--<h2> Menu</h2> -->
     
     <ul>
   
