--- a/index.html
+++ b/index.html
@@ -84,41 +84,41 @@
 
 
   <span class = "mainMenu">
-
-    <h2> Menu</h2>
+    <div id = "menu">
+      <h1> Menu</h1>
+      
+      <ul>
     
-    <ul>
-  
-      <a href = "#Mike's Special"> Mike's Special </a>
-      <a href = "#Large Fries with Extra Butter"> Large Fries with Extra Butter </a>
-      <a href = "#Spaghetti alla Code"> Spaghetti alla Code </a>
-      <a href = "#Item 4"> Item 4 </a>
-      <a href = "#Item 5"> Item 5 </a>
-      <a href = "#Item 6"> Item 6 </a>
-      <a href = "#Item 7"> Item 7 </a>
-      <a href = "#Item 8"> Item 8 </a>
-      <a href = "#Item 9"> Item 9 </a>
-      <a href = "#Item 10"> Item 10 </a>
-      <a href = "#Item 11"> Item 11 </a>
-      <a href = "#Item 12"> Item 12 </a>
-      <a href = "#Item 13"> Item 13 </a>
-      <a href = "#Item 14"> Item 14 </a>
-      <a href = "#Item 15"> Item 15 </a>
-      <a href = "#Item 16"> Item 16 </a>
-      <a href = "#Item 17"> Item 17 </a>
-      <a href = "#Item 18"> Item 18 </a>
-      <a href = "#Item 19"> Item 19 </a>
-      <a href = "#Item 20"> Item 20 </a>
-      <a href = "#Item 21"> Item 21 </a>
-      <a href = "#Item 22"> Item 22 </a>
-      <a href = "#Item 23"> Item 23 </a>
-      <a href = "#Item 24"> Item 24 </a>
-      <a href = "#Item 25"> Item 25 </a>
-      <a href = "#Item 26"> Item 26 </a>
-      <a href = "#Item 27"> Item 27 </a>
+        <a href = "#Mike's Special"> Mike's Special </a>
+        <a href = "#Large Fries with Extra Butter"> Large Fries with Extra Butter </a>
+        <a href = "#Spaghetti alla Code"> Spaghetti alla Code </a>
+        <a href = "#Item 4"> Item 4 </a>
+        <a href = "#Item 5"> Item 5 </a>
+        <a href = "#Item 6"> Item 6 </a>
+        <a href = "#Item 7"> Item 7 </a>
+        <a href = "#Item 8"> Item 8 </a>
+        <a href = "#Item 9"> Item 9 </a>
+        <a href = "#Item 10"> Item 10 </a>
+        <a href = "#Item 11"> Item 11 </a>
+        <a href = "#Item 12"> Item 12 </a>
+        <a href = "#Item 13"> Item 13 </a>
+        <a href = "#Item 14"> Item 14 </a>
+        <a href = "#Item 15"> Item 15 </a>
+        <a href = "#Item 16"> Item 16 </a>
+        <a href = "#Item 17"> Item 17 </a>
+        <a href = "#Item 18"> Item 18 </a>
+        <a href = "#Item 19"> Item 19 </a>
+        <a href = "#Item 20"> Item 20 </a>
+        <a href = "#Item 21"> Item 21 </a>
+        <a href = "#Item 22"> Item 22 </a>
+        <a href = "#Item 23"> Item 23 </a>
+        <a href = "#Item 24"> Item 24 </a>
+        <a href = "#Item 25"> Item 25 </a>
+        <a href = "#Item 26"> Item 26 </a>
+        <a href = "#Item 27"> Item 27 </a>
 
-    </ul>
-
+      </ul>
+    </div>
   </span>
 
 
