Minor Touch Ups

--- a/index.html
+++ b/index.html
@@ -21,26 +21,19 @@
 
     <button class = "headerButton left" onclick="document.location='create_account.html'"> Create Account </button>
     <button class = "headerButton left" onclick="document.location='login.html'"> Log In </button>
-    
-    foodGram
-    
+    <img id = "logo" src="logo1.png">
     <button class = "headerButton right" id = "checkoutButton"> <i class="material-icons">add_shopping_cart</i> Cart </button>
     <!--<button class = "headerButton right" id = "searchButton"> <i class="material-icons">search</i> Search  </button> -->
     <form>
       <input id = "searchBar" type="text" name="search">
     </form>
   </header>
-
-  <!-- creates a red space between header and navbar, should be a better solution to this-->
-  <div style="height: 25px; background-color: rgb(25,25,25); margin: auto;"></div>
-
   <div class = "topNavBar">
-    <a href = "#Fast Food"> Fast Food </a>
-    <a href = "#Pizza"> Pizza </a>
-    <a href = "#Burgers"> Burgers </a>
-    <a href = "#Fine Dinning"> Fine Dinning </a>
-    <a href = "#Desserts"> Desserts </a>
-    <a href = "#Drinks"> Drinks </a>
+    <a href = "#Pizza"> <img src = "navBarIcons/pizza.png" style="width:30px; height:30px;"> Pizza </a>
+    <a href = "#Burgers"><img src = "navBarIcons/burger.png" style="width:30px; height:30px;"> Burgers </a>
+    <a href = "#Fine Dinning"><img src = "navBarIcons/roast.png" style="width:40px; height:30px;"> Fine Dinning </a>
+    <a href = "#Desserts"><img src = "navBarIcons/cupcake.png" style="width:30px; height:30px;"> Desserts </a>
+    <a href = "#Drinks"><img src = "navBarIcons/coffee.png" style="width:30px; height:30px;"> Drinks </a>
   </div>
   <div class = "socialMenu">
 
@@ -118,6 +111,7 @@
         <a href = "#Item 27"> Item 27 </a>
 
       </ul>
+      <h1></h1>
     </div>
   </span>
 
