Starting search functionality

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
   <span class = "mainMenu">
     <div id = "menu">
-      <h1> Menu</h1>
+      <h1 id = "resultsHeader"> Popular Restaurants</h1>
       
-      <ul>
+      <ul id = "resultsList">
     
         <a href = "#Mike's Special"> Mike's Special </a>
         <a href = "#Large Fries with Extra Butter"> Large Fries with Extra Butter </a>
@@ -115,8 +115,8 @@
     </div>
   </span>
 
-
-  <script src = "script.js"> </script>
+  <script src = "BackEnd.js"></script>
+  <script src = "script.js" type = "module"> </script>
 
 
   <div class="footer">
