--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
 <head>
   <link rel="stylesheet" href="styles.css">
-  <script type="text/javascript" src="2.js"></script>
   <script type="text/javascript" src="BackEnd.js"></script>
   <!-- Imports Google icons for use-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -116,8 +115,7 @@
     </div>
   </span>
 
-  <script src = "BackEnd.js"></script>
-  <script src = "script.js" type = "module"> </script>
+  <script src = "script.js"> </script>
 
 
   <div class="footer">
