--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class = "socialMenu">
 
     <ul>
-      <button class = "socialMenu button"> Review 1 </button>
+      <button id="review1" class = "socialMenu button"> Review 1 </button>
       <button class = "socialMenu button"> Review 2 </button>
       <button class = "socialMenu button"> Review 3 </button>
       <button class = "socialMenu button"> Review 4 </button>
@@ -69,7 +69,7 @@
     </ul>
 
   </div>
-
+  <script> displayReviews() </script>
   
   <span class = "featuredReview">
 
