Featured Review Added!

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
 
   <span class = "featuredReview">
 
-    <button class = "featureReview Button"> Featured Review 1 </button>
+    <button id = "featuredReviewButton" class = "featureReview Button"> Featured Review 1 </button>
 
   </span>
+
+  <script> displayFeaturedReview() </script>
 
 
   <span class = "mainMenu">
