--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
 
   <div class = "topNavBar">
-    <a href = "#Pizza"> <img src = "navBarIcons/pizza.png" style="width:30px; height:30px;"> Pizza </a>
-    <a href = "#Burgers"><img src = "navBarIcons/burger.png" style="width:30px; height:30px;"> Burgers </a>
-    <a href = "#Fine Dinning"><img src = "navBarIcons/roast.png" style="width:40px; height:30px;"> Fine Dinning </a>
-    <a href = "#Desserts"><img src = "navBarIcons/cupcake.png" style="width:30px; height:30px;"> Desserts </a>
-    <a href = "#Drinks"><img src = "navBarIcons/coffee.png" style="width:30px; height:30px;"> Drinks </a>
+    <a href = "index.html?search=Pizza"> <img src = "navBarIcons/pizza.png" style="width:30px; height:30px;"> Pizza </a>
+    <a href = "index.html?search=Burger"><img src = "navBarIcons/burger.png" style="width:30px; height:30px;"> Burgers </a>
+    <a href = "index.html?search=Fine Dinning"><img src = "navBarIcons/roast.png" style="width:40px; height:30px;"> Fine Dinning </a>
+    <a href = "index.html?search=Dessert"><img src = "navBarIcons/cupcake.png" style="width:30px; height:30px;"> Desserts </a>
+    <a href = "index.html?search=Drink"><img src = "navBarIcons/coffee.png" style="width:30px; height:30px;"> Drinks </a>
   </div>
 
 
@@ -80,7 +80,7 @@
 
   <span class = "mainMenu">
     <div id = "menu">
-      <h1 id = "resultsHeader"> Popular Restaurants</h1>
+      <h1 id = "resultsHeader" name = "menu"> Popular Restaurants</h1>
       
       <ul id = "resultsList">
     
