Revert "Fixed Maybe"
This reverts commit 81b82e770b184b81e9c762327d11670462ccb358.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <span class = "mainMenu">
     <div id = "menu">
-      <h1 id = "resultsHeader" name = "menu"> Popular Restaurants</h1>
+      <h1 id = "resultsHeader"> Popular Restaurants</h1>
       
       <ul id = "resultsList">
     
