--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <head>
   <link rel="stylesheet" href="styles.css">
   <script type="text/javascript" src="BackEnd.js"></script>
+  <script src = "BackEnd.js"> </script>
   <script src = "script.js"> </script>
   <!-- Imports Google icons for use-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
