--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   <ul class = "topNavBar">
     
         <li><a href = "index.html?search=Pizza"> <img src = "navBarIcons/pizza.png" style="width:30px; height:30px;"> Pizza </a></li>
-        <li><a href = "index.html?search=Burgers"><img src = "navBarIcons/burger.png" style="width:30px; height:30px;"> Burgers </a></li>
-        <li><a href = "index.html?search=Fine Dinning"><img src = "navBarIcons/roast.png" style="width:40px; height:30px;"> Fine Dinning </a></li>
-        <li><a href = "index.html?search=Desserts"><img src = "navBarIcons/cupcake.png" style="width:30px; height:30px;"> Desserts </a></li>
-        <li><a href = "index.html?search=Drinks"><img src = "navBarIcons/coffee.png" style="width:30px; height:30px;"> Drinks </a></li>
+        <li><a href = "index.html?search=Burger"><img src = "navBarIcons/burger.png" style="width:30px; height:30px;"> Burgers </a></li>
+        <li><a href = "index.html?search=Steak"><img src = "navBarIcons/roast.png" style="width:40px; height:30px;"> Fine Dinning </a></li>
+        <li><a href = "index.html?search=Dessert"><img src = "navBarIcons/cupcake.png" style="width:30px; height:30px;"> Desserts </a></li>
+        <li><a href = "index.html?search=Drink"><img src = "navBarIcons/coffee.png" style="width:30px; height:30px;"> Drinks </a></li>
   
   </ul>
 
