Login Signup UI Changes
Made color scheme and fonts of the login/signup area more consistant with the rest of the site

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
   <div id="login" class="modal">
 	<form class="modal-content animate" method="post">
-		<div style ="color: white">
-		  <h1 style="text-align:center">Welcome to foodGram!</h1>
+    <div style ="color: rgba(187,134,252);">
+		  <h1 style="text-align:center">Welcome to FoodGram!</h1>
 		  <label for="username"><b>Username:</b></label><br>
 		  <input type="text" id="username" name="username" placeholder="Enter Username" autofocus required><br>
 
@@ -117,10 +117,10 @@
   </div>
   
     <div id="loginSucess" class="modal">
-	<div class="modal-content animate" style ="color: white">
-	  <h1 style="text-align:center">Welcome to foodGram!</h1>
+<div class="modal-content animate" style ="color: rgba(187,134,252);">
+	  <h1 style="text-align:center">Welcome to FoodGram!</h1>
 	  <p>You have been successfully logged in.</p><br>
-	  <p>Enjoy your delicious food, and don't forget to use our special's for you: MilkTheCow .</p><br>
+	  <p>Enjoy your delicious food, and don't forget to use our special's for you: MilkTheCow.</p><br>
 	  <p>You can close this window now.</p><br>
 	  <button class = "cancelButton" onclick="document.getElementById('loginSucess').style.display='none'; document.getElementById('login').style.display='none';">Close</button>
 	</div>
@@ -128,8 +128,8 @@
   
   <div id="signup" class="modal">
 	<form class="modal-content animate" method="post">
-		<div style ="color: white">
-		  <h1 style="text-align:center">Welcome to foodGram!</h1>
+		<div style ="color: rgba(187,134,252);">
+		  <h1 style="text-align:center">Welcome to FoodGram!</h1>
 		  
 		  <label for="fname"><b>First Name:</b></label><br>
 		  <input type="text" id="fname" name="fname" placeholder="Your First Name" autofocus required><br>
@@ -160,8 +160,8 @@
   </div>
 
   <div id="signupSucess" class="modal">
-	<div class="modal-content animate" style ="color: white">
-	  <h1 style="text-align:center">Welcome to foodGram!</h1>
+	<div class="modal-content animate" style ="color: rgba(187,134,252);">
+	  <h1 style="text-align:center;">Welcome to foodGram!</h1>
 	  <p>Your account has been created successfully.</p><br>
 	  <p>You can close this window and login now.</p><br>
 	  <button class = "cancelButton" onclick="document.getElementById('signupSucess').style.display='none'; document.getElementById('signup').style.display='none';">Close</button>
