Added logo to sign-in/login

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <div id="login" class="modal">
 	<form class="modal-content animate" method="post">
     <div style ="color: rgba(187,134,252);">
-		  <h1 style="text-align:center">Welcome to FoodGram!</h1>
+		  <h1 style="text-align:center">Welcome to <img id = "logo" src="logo1.png" style="top: +10px;">!</h1>
 		  <label for="username"><b>Username:</b></label><br>
 		  <input type="text" id="username" name="username" placeholder="Enter Username" autofocus required><br>
 
@@ -118,7 +118,7 @@
   
     <div id="loginSucess" class="modal">
 <div class="modal-content animate" style ="color: rgba(187,134,252);">
-	  <h1 style="text-align:center">Welcome to FoodGram!</h1>
+	  <h1 style="text-align:center">Welcome to <img id = "logo" src="logo1.png" style="top: +10px;">!</h1>
 	  <p>You have been successfully logged in.</p><br>
 	  <p>Enjoy your delicious food, and don't forget to use our special's for you: MilkTheCow.</p><br>
 	  <p>You can close this window now.</p><br>
@@ -129,7 +129,7 @@
   <div id="signup" class="modal">
 	<form class="modal-content animate" method="post">
 		<div style ="color: rgba(187,134,252);">
-		  <h1 style="text-align:center">Welcome to FoodGram!</h1>
+		  <h1 style="text-align:center">Welcome to <img id = "logo" src="logo1.png" style="top: +10px;">!</h1>
 		  
 		  <label for="fname"><b>First Name:</b></label><br>
 		  <input type="text" id="fname" name="fname" placeholder="Your First Name" autofocus required><br>
