--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
   <div id="signupSucess" class="modal">
 	<div class="modal-content animate" style ="color: rgba(187,134,252);">
-	  <h1 style="text-align:center;">Welcome to foodGram!</h1>
+	  <h1 style="text-align:center;">Welcome to <img id = "logo" src="logo1.png" style="top: +10px;">!</h1>
 	  <p>Your account has been created successfully.</p><br>
 	  <p>You can close this window and login now.</p><br>
 	  <button class = "cancelButton" onclick="document.getElementById('signupSucess').style.display='none'; document.getElementById('signup').style.display='none';">Close</button>
@@ -169,10 +169,10 @@
   </div>
   
   <div id="contact" class="modal">
-	<div class="modal-content animate" style ="color: white">
-	  <h1 style="text-align:center">Welcome to foodGram!</h1>
+	<div class="modal-content animate" style ="color: rgba(187,134,252);">
+	  <h1 style="text-align:center">Welcome to <img id = "logo" src="logo1.png" style="top: +10px;">!</h1>
 	  <p>This is our high-fidelity vertical prototype. Formed as a part of our HCI project.</p><br>
-	  <pre style="font-size: 16px">		
+	  <pre style="font-size: 16px; font-weight: bold; font-size: large;">		
 	  Developed by: 
 	  Aniket Mall 								malla@myumanitoba.ca
 	  Christopher Vattheuer	 						vattheuc@myumanitoba.ca
