minor change to buttons in featured

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 
   <span class = "featuredReview">
 
-    <button id = "featuredReviewButton" class = "featureReview Button"> Featured Review 1 </button>
+    <button id = "featuredReviewButton" class = "featuredReviewButton left"> << </button>
+    <button id = "featuredReviewButton" class = "featuredReviewButton right"> >> </button>
 
   </span>
 
