--- a/index.html
+++ b/index.html
@@ -51,12 +51,35 @@
 
   <script> displayRestaurantReviews() </script>
 
-  <span class = "featuredReview">
+  <div class = "featuredReview">
 
-    <button id = "featuredReviewButton" class = "featuredReviewButton left"> << </button>
-    <button id = "featuredReviewButton" class = "featuredReviewButton right"> >> </button>
+    <button id = "featuredReviewButton" class = "featuredReviewButton left" onclick="plusDivs(-1)">&#10094; </button>
+    <button id = "featuredReviewButton" class = "featuredReviewButton right" onclick="plusDivs(1)">&#10095; </button>
 
-  </span>
+
+      <img class="mySlides" src="testfoodpic1.jpg" width="600" height="400">
+      <img class="mySlides" src="testfoodpic2.jpg" width="600" height="400">
+
+        <script>
+        var slideIndex = 1;
+        showDivs(slideIndex);
+
+        function plusDivs(n) {
+            showDivs(slideIndex += n);
+        }
+
+        function showDivs(n) {
+            var i;
+            var x = document.getElementsByClassName("mySlides");
+            if (n > x.length) {slideIndex = 1}
+            if (n < 1) {slideIndex = x.length}
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            x[slideIndex-1].style.display = "block";
+        }
+        </script>
+  </div>
 
   <script> displayFeaturedReview() </script>
 
