Made some edits to featured review layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<title>foodGram</title>
+<title>Welcome to FoodGram</title>
 
 <body>
 
@@ -41,7 +41,6 @@
   
   </ul>
 
-
   <div id = "socialMenu" class = "socialMenu">
 
     <ul id = "RestaurantReviews">
@@ -49,16 +48,27 @@
 
   </div>
 
+
+
+
+
+
   <script> displayRestaurantReviews() </script>
 
   <div class = "featuredReview">
 
+    
+
+    <button id = "featuredReviewButton" class = "featuredReviewButton left" onclick="plusDivs(1)">&#10095; </button>
     <button id = "featuredReviewButton" class = "featuredReviewButton left" onclick="plusDivs(-1)">&#10094; </button>
     <button id = "featuredReviewButton" class = "featuredReviewButton right" onclick="plusDivs(1)">&#10095; </button>
 
 
-      <img class="mySlides" src="testfoodpic1.jpg" width="600" height="400">
-      <img class="mySlides" src="testfoodpic2.jpg" width="600" height="400">
+
+
+
+      <!-- img class="mySlides" src="testfoodpic1.jpg" width="600" height="400"-->
+      <!-- img class="mySlides" src="testfoodpic2.jpg" width="600" height="400"-->
 
         <script>
         var slideIndex = 1;
@@ -82,6 +92,12 @@
   </div>
 
   <script> displayFeaturedReview() </script>
+
+
+
+
+
+
 
 
   <span class = "mainMenu">
