Fixed buttons in featured review

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
     
 
-    <button id = "featuredReviewButton" class = "featuredReviewButton left" onclick="plusDivs(1)">&#10095; </button>
-    <button id = "featuredReviewButton" class = "featuredReviewButton left" onclick="plusDivs(-1)">&#10094; </button>
-    <button id = "featuredReviewButton" class = "featuredReviewButton right" onclick="plusDivs(1)">&#10095; </button>
+    <button class = "featuredReviewButton left" onclick="plusDivs(1)">&#10094; </button>
+    <button id = "featuredReviewButton" class = "featuredReviewButton left" onclick="plusDivs(-1)"> </button>
+    <button class = "featuredReviewButton right" onclick="plusDivs(1)">&#10095; </button>
 
 
 
