--- a/index.html
+++ b/index.html
@@ -60,12 +60,15 @@
 
     
 
-    <button class = "featuredReviewButton left" onclick="plusDivs(1)">&#10094; </button>
-    <button id = "featuredReviewButton" class = "featuredReviewMain center" onclick="plusDivs(-1)"> </button>
+    <button class = "featuredReviewButton left" onclick="plusDivs(1)">&#10094;  </button>
+    <button id = "featuredReviewButton" class = "featuredReviewMain center"> 
+
+    
+    </button>
     <button class = "featuredReviewButton right" onclick="plusDivs(1)">&#10095; </button>
 
-      <!-- img class="mySlides" src="testfoodpic1.jpg" width="600" height="400"-->
-      <!-- img class="mySlides" src="testfoodpic2.jpg" width="600" height="400"-->
+      <!--img class="mySlides" src="testfoodpic1.jpg" width="600" height="400"-->
+      <!--img class="mySlides" src="testfoodpic2.jpg" width="600" height="400"-->
 
         <script>
         var slideIndex = 1;
