Main review images fixed up a bit

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <button id = "featuredReviewButton" class = "featuredReviewMain center"> 
 
       
-      <img class="mySlides" src="testfoodpic1.jpg" width="400" height="200">
-      <img class="mySlides" src="testfoodpic2.jpg" width="400" height="200">
+      <!--img class="mySlides" src="testfoodpic1.jpg" width="400" height="200"-->
+      <!--img class="mySlides" src="testfoodpic2.jpg" width="400" height="200"-->
 
         <script>
         var slideIndex = 1;
