updated BackEnd.js to support background images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <html>
 
 <head>
-  <link id = "style" rel="stylesheet" href="styles.css">
+  <link id = "myStyleSheet" rel="stylesheet" href="styles.css">
   <script type="text/javascript" src="BackEnd.js"></script>
   <script src = "BackEnd.js"> </script>
   <!-- Imports Google icons for use-->
@@ -60,28 +60,26 @@
 
 
     <button class = "featuredReviewButton left" onclick="plusDivs(1)">&#10094;  </button>
-    <button id = "featuredReviewButton" id = "featuredReviewMain" class = "featuredReviewMain center"> </button>
-    <button class = "featuredReviewButton right" onclick="nextItem()" onclick="plusDivs(1)">&#10095; </button>
+
+
+
+    <button id = "featuredReviewButton" id = "featuredReviewMain" class = "featuredReviewMain center"> 
+
+      
+
+
+
+    </button>
+
+
+
+
+    <button class = "featuredReviewButton right" onclick="nextImage()" onclick="plusDivs(1)">&#10095; </button>
 
 
   </div>
 
 
-
-
-  <script>
-
-    function nextItem(){
-
-    
-
-
-
-    }
-
-
-
-  </script>
 
 
 
@@ -114,10 +112,6 @@
 
 
   <script> displayFeaturedReview() </script>
-
-
-
-
 
 
 
