Fixed search bar alignment and spelling mistake

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 		  <input class = "login" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-456-7890" required><br>			  
 		  
 		  <label for="email"><b>Email:</b></label><br>
-		  <input class = "login" type="email" id="email" name="email" placeholder="YourEmail@Egsample.com" required><br>
+		  <input class = "login" type="email" id="email" name="email" placeholder="YourEmail@Example.com" required><br>
 		  
 		  <label for="username"><b>Username:</b></label><br>
 		  <input class = "login" type="text" id="username" name="username" placeholder="Choose Username" required><br>
