--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <div id = "socialMenu" class = "socialMenu">
 
-    <ul id = "RestaurantReviews">
+    <ul id = "RestaurantReviews" class = "RestaurantReviews">
     </ul>
 
   </div>
