--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li><a href = "index.html?search=Burger"><img src = "navBarIcons/burger.png" style="width:30px; height:30px;"> Burgers </a></li>
         <li><a href = "index.html?search=Steak"><img src = "navBarIcons/roast.png" style="width:40px; height:30px;"> Fine Dinning </a></li>
         <li><a href = "index.html?search=Dessert"><img src = "navBarIcons/cupcake.png" style="width:30px; height:30px;"> Desserts </a></li>
-        <li><a href = "index.html?search=Drink"><img src = "navBarIcons/coffee.png" style="width:30px; height:30px;"> Drinks </a></li>
+        <li><a href = "index.html?search=Drinks"><img src = "navBarIcons/coffee.png" style="width:30px; height:30px;"> Drinks </a></li>
   
   </ul>
 
@@ -51,15 +51,12 @@
 
 
 
-
-
-
   <script> displayRestaurantReviews() </script>
 
   <div id = "test" class = "featuredReview">
 
 
-    <button class = "featuredReviewButton left" onclick="plusDivs(1)">&#10094;  </button>
+    <button class = "featuredReviewButton left">&#10094;  </button>
 
 
 
@@ -78,36 +75,6 @@
 
 
   </div>
-
-
-
-
-
-
-      <!--img class="mySlides" src="testfoodpic1.jpg" width="400" height="200"-->
-      <!--img class="mySlides" src="testfoodpic2.jpg" width="400" height="200"-->
-
-        <script>
-        var slideIndex = 1;
-        showDivs(slideIndex);
-
-        function plusDivs(n) {
-            showDivs(slideIndex += n);
-        }
-
-        function showDivs(n) {
-            var i;
-            var x = document.getElementsByClassName("mySlides");
-            if (n > x.length) {slideIndex = 1}
-            if (n < 1) {slideIndex = x.length}
-            for (i = 0; i < x.length; i++) {
-                x[i].style.display = "none";
-            }
-            x[slideIndex-1].style.display = "block";
-        }
-        </script>
-
-
 
 
 
