WORKING FEATURED REVIEW!

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div id = "test" class = "featuredReview">
 
 
-    <button class = "featuredReviewButton left">&#10094;  </button>
+    <button class = "featuredReviewButton left" onclick="changeFeaturedReview(-1)">&#10094;  </button>
 
 
 
@@ -71,7 +71,7 @@
 
 
 
-    <button class = "featuredReviewButton right" onclick="nextImage()" onclick="plusDivs(1)">&#10095; </button>
+    <button class = "featuredReviewButton right" onclick="changeFeaturedReview(1)" onclick="plusDivs(1)">&#10095; </button>
 
 
   </div>
