--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <script> displayRestaurantReviews() </script>
 
-  <div id = "test" class = "featuredReview">
+  <div class = "featuredReview">
 
 
     <button class = "featuredReviewButton left" onclick="changeFeaturedReview(-1)">&#10094;  </button>
@@ -64,6 +64,8 @@
 
       
 
+     <!--img id = "stars" class = "content-front" src="stars/4star.png"-->
+
 
 
     </button>
@@ -71,7 +73,7 @@
 
 
 
-    <button class = "featuredReviewButton right" onclick="changeFeaturedReview(1)" onclick="plusDivs(1)">&#10095; </button>
+    <button class = "featuredReviewButton right" onclick="changeFeaturedReview(1)">&#10095; </button>
 
 
   </div>
