--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <button class = "headerButton left" onclick="document.getElementById('signup').style.display='block'"> Sign Up </button>
     <button class = "headerButton left" onclick="document.getElementById('login').style.display='block'"> Log In </button>
     <img id = "logo" src="logo1.png">
-      <button class = "headerButton right" onclick="document.getElementById('cart').style.display='block'"
+      <button class = "headerButton right"
               id = "checkoutButton"> <i class="material-icons">add_shopping_cart</i> Cart </button>
     <!--<button class = "headerButton right" id = "searchButton"> <i class="material-icons">search</i> Search  </button> -->
     <form>
