Added hover effect to sdie review and to search

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="socialMenu" id = "socialMenu">  <!-- This is the reviews on left side -->
-        <p>User Reviews</p>
+        <p>Trending Reviews</p>
         <ul id = "RestaurantReviews" class = "RestaurantReviews">
         </ul>
         <script> displayRestaurantReviews() </script>
