--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="socialMenu" id = "socialMenu">  <!-- This is the reviews on left side -->
-        <p>Trending Reviews</p>
+        <p id = "reviewTitle" >Trending Reviews</p>
         <ul id = "RestaurantReviews" class = "RestaurantReviews">
         </ul>
         <script> displayRestaurantReviews() </script>
@@ -51,8 +51,8 @@
     </div>
 
     <div class="menuChoice">
-        <button class = "TrendingButton"> Trending Tab </button>
-        <button class = "FriendButton"> Friends Tab </button>
+        <button class = "TrendingButton" onclick="document.getElementById('reviewTitle').textContent='Trending Review'"> Trending Reviews </button>
+        <button class = "FriendButton" onclick="document.getElementById('reviewTitle').textContent='Friend Reviews'"> Friend Reviews </button>
     </div>  <!-- These are Friends/Trending Buttons -->
 
     <div class="featuredReview">  <!-- This is the big review in the top middle. -->
@@ -78,7 +78,7 @@
                 <p>This is our high-fidelity vertical prototype. Formed as a part of our HCI project.</p><br>
                 <pre style="font-size: 16px; font-weight: bold; font-size: large;">
 	  Developed by:
-	  Aniket Mall 								malla@myumanitoba.ca
+        Aniket Mall 							        malla@myumanitoba.ca
 	  Christopher Vattheuer	 						vattheuc@myumanitoba.ca
 	  Matthias Penner 							pennerm2@myumanitoba.ca
 	  Paul Granelli 							umgranel@myumanitoba.ca
