Rounded Add to cart button

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="footer">
         <div id="contact" class="modal">
             <div class="modal-content animate" style ="color: rgb(187,134,252);">
-                <h1 style="text-align:center">Welcome to Food Gram!</h1>
+                <h1 style="text-align:center">Welcome to FoodGram!</h1>
                 <p>This is our high-fidelity vertical prototype. Formed as a part of our HCI project.</p><br>
                 <pre style="font-size: 16px; font-weight: bold; font-size: large;">
 	  Developed by:
@@ -136,7 +136,7 @@
 <div id="login" class="modal">
     <form class="modal-content animate" method="post">
         <div style ="color: rgba(187,134,252);">
-            <h1 style="text-align:center">Welcome to <img id = "logo" src="logo1.png" style="top: +10px;">!</h1>
+            <h1 style="text-align:center">Welcome to FoodGram!</h1>
             <label for="username"><b>Username:</b></label><br>
             <input class = "login" type="text" id="username" name="username" placeholder="Enter Username" autofocus required><br>
 
@@ -151,7 +151,7 @@
 
 <div id="loginSucess" class="modal">
     <div class="modal-content animate" style ="color: rgba(187,134,252);">
-        <h1 style="text-align:center">Welcome to <img id = "logo" src="logo1.png" style="top: +10px;">!</h1>
+        <h1 style="text-align:center">Welcome to FoodGram!</h1>
         <p>You have been successfully logged in.</p><br>
         <p>Enjoy your delicious food, and don't forget to use our special's for you: MilkTheCow.</p><br>
         <p>You can close this window now.</p><br>
@@ -162,7 +162,7 @@
 <div id="signup" class="modal">
     <form class="modal-content animate" method="post">
         <div style ="color: rgba(187,134,252);">
-            <h1 style="text-align:center">Welcome to <img id = "logo" src="logo1.png" style="top: +10px;">!</h1>
+            <h1 style="text-align:center">Welcome to FoodGram!</h1>
 
             <label for="fname"><b>First Name:</b></label><br>
             <input class = "login" type="text" id="fname" name="fname" placeholder="Your First Name" autofocus required><br>
@@ -194,7 +194,7 @@
 
 <div id="signupSucess" class="modal">
     <div class="modal-content animate" style ="color: rgba(187,134,252);">
-        <h1 style="text-align:center;">Welcome to <img id = "logo" src="logo1.png" style="top: +10px;">!</h1>
+        <h1 style="text-align:center;">Welcome to FoodGram!</h1>
         <p>Your account has been created successfully.</p><br>
         <p>You can close this window and login now.</p><br>
         <button class = "cancelButton" onclick="document.getElementById('signupSucess').style.display='none'; document.getElementById('signup').style.display='none';">Close</button>
