Minor changes to payment

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
 
     <div class="cart2">
-        <h1>Payment Options</h1>
+        <h1 style="text-align: center;">Payment Options</h1>
         <label for="Payment Method">Select Payment Method:</label>
 
         <select name="Payment Method" id="Payment Method">
